# ChangeLog for games-fps/uhexen2
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Apr 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-1.4.3_rc1.ebuild, +uhexen2-1.4.3.ebuild:
  Version bump

  17 Feb 2008; Davide Cendron (scen) <scen@gentoo.org>
  -files/uhexen2-1.4.2_fix_huffman-vuln.patch:
  Remove old patch

  17 Feb 2008; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-1.4.2-r1.ebuild, +uhexen2-1.4.3_rc1.ebuild:
  Version bump

  06 Jan 2008; Markus Ullmann <jokey@gentoo.org> uhexen2-1.4.2:
  Drop old

  19 Dec 2007; Davide Cendron (scen) <scen@gentoo.org>
  +files/uhexen2-1.4.2_fix_huffman-vuln.patch, +uhexen2-1.4.2-r1.ebuild:
  Security-Version bump. Fixes Secunia Advisory SA28124

  08 Nov 2007; Davide Cendron (scen) <scen@gentoo.org> ChangeLog:
  Update manifest (hexenworld-pakfiles tarball has been updated some time ago)

  29 Oct 2007; Davide Cendron (scen) <scen@gentoo.org> uhexen2-1.4.2.ebuild:
  Fixed DESCRIPTION

  25 Oct 2007; Davide Cendron (scen) <scen@gentoo.org> uhexen2-1.4.2.ebuild:
  Rollback (partially) previous change: uhexen2 and uhexen2-cvs cannot coexist

  19 Oct 2007; Markus Ullmann <jokey@gentoo.org> uhexen2-1.4.2:
  Don't have an ebuild block itself

  04 Oct 2007; Davide Cendron (scen) <scen@gentoo.org> uhexen2-1.4.2.ebuild:
  Version bump for demodata dependency

  03 Oct 2007; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-1.4.2_rc2.ebuild:
  Drop old (2nd attempt) :P

  03 Oct 2007; Davide Cendron (scen) <scen@gentoo.org>
  -files/uhexen2-1.4.2_rc1-h2launcher_improvements.diff,
  +uhexen2-1.4.2.ebuild:
  Version bump (and drop old)

  25 Jul 2007; Davide Cendron (scen) <scen@gentoo.org>
  -uhexen2-1.4.2_rc1.ebuild, +uhexen2-1.4.2_rc2.ebuild:
  Version bump, including some fixes/enhancements (and drop old)

  29 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  uhexen2-1.4.2_rc1.ebuild:
  a different solution to a negated USE check
